Fixed lesson page size on iOS fullscreen

--- a/src/components/LessonPage/TitleBar/TitleBar.module.scss
+++ b/src/components/LessonPage/TitleBar/TitleBar.module.scss
@@ -10,6 +10,7 @@
 	display: flex;
 	flex-flow: row nowrap;
 	align-items: center;
+	padding-top: env(safe-area-inset-top);
 
 
 	#sidebar-button {
