--- a/src/pages/_app.scss
+++ b/src/pages/_app.scss
@@ -8,6 +8,11 @@
 	box-sizing: border-box;
 }
 
+html {
+	width: 100%;
+	height: 100vh;
+}
+
 body {
 	font-family: fonts.$native-stack;
 	color: colours.$primary-font;
